--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "ai",
     "dify",
     "vercel-ai-sdk",
-    "provider"
+    "dify-ai-provider"
   ],
   "author": "Oscar Jiang <pengj0520@gmail.com>",
   "repository": {
@@ -39,8 +39,7 @@
   "license": "MIT",
   "dependencies": {
     "@ai-sdk/provider": "^1.1.3",
-    "@ai-sdk/provider-utils": "^2.2.7",
-    "ai": "^4.3.9"
+    "@ai-sdk/provider-utils": "^2.2.7"
   },
   "devDependencies": {
     "@types/node": "^20.11.5",
@@ -48,8 +47,5 @@
     "tsx": "^4.7.0",
     "typescript": "^5.3.3",
     "vitest": "^1.0.0"
-  },
-  "peerDependencies": {
-    "ai": "^2.0.0"
   }
 } 
