--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
   "license": "MIT",
   "dependencies": {
     "@ai-sdk/provider": "^1.1.3",
-    "@ai-sdk/provider-utils": "^2.2.7"
+    "@ai-sdk/provider-utils": "^2.2.7",
+    "zod": "^3.24.3"
   },
   "devDependencies": {
     "@types/node": "^20.11.5",
@@ -48,4 +49,4 @@
     "typescript": "^5.3.3",
     "vitest": "^1.0.0"
   }
-} 
+}
